[gd_scene load_steps=44 format=3 uid="uid://ds7v731w16353"]

[ext_resource type="Script" path="res://platformer/dungeon1/Scene1.gd" id="1_x5e3m"]
[ext_resource type="Texture2D" uid="uid://dri6tjkm83wkm" path="res://assets/tiles/Bricks1.png" id="2_1flpy"]
[ext_resource type="PackedScene" uid="uid://dwmvg06mjeseb" path="res://platformer/players/Players.tscn" id="2_h54dm"]
[ext_resource type="PackedScene" uid="uid://cq7bdxhnnktl1" path="res://platformer/dungeon1/CameraLimitSetter.tscn" id="2_luo75"]
[ext_resource type="PackedScene" uid="uid://bv3nwqw7dlit1" path="res://platformer/scene_parts/Background.tscn" id="3_dblrk"]
[ext_resource type="PackedScene" uid="uid://cb2dvojxoxhol" path="res://platformer/scene_parts/Ceiling.tscn" id="4_pyp8n"]
[ext_resource type="PackedScene" uid="uid://63giocnsvrqi" path="res://platformer/scene_parts/Floor.tscn" id="5_omt4w"]
[ext_resource type="PackedScene" uid="uid://dumot6m6l1tbo" path="res://platformer/scene_parts/FloatingPlatform.tscn" id="6_kypob"]
[ext_resource type="PackedScene" uid="uid://c7cvc0vmc2yjo" path="res://platformer/scene_parts/Wall.tscn" id="7_4p4r4"]
[ext_resource type="PackedScene" uid="uid://brm0fg71vut1d" path="res://platformer/light/CandleStick.tscn" id="8_r2k6b"]
[ext_resource type="PackedScene" uid="uid://0qg662nfgu72" path="res://platformer/light/Lantern.tscn" id="9_jmdpn"]
[ext_resource type="PackedScene" uid="uid://cm5cwh0yun126" path="res://platformer/scene_parts/SimplePlatform.tscn" id="10_3ckih"]
[ext_resource type="Texture2D" uid="uid://gi1ktxidiqn5" path="res://assets/props/Chair1LEFT.png" id="11_hdj0o"]
[ext_resource type="Texture2D" uid="uid://cbquk7fxfc0sw" path="res://assets/props/Chair1RIGHT.png" id="12_oqgw6"]
[ext_resource type="Texture2D" uid="uid://lob1uxr2ngbe" path="res://assets/props/Table.png" id="13_43pew"]
[ext_resource type="Texture2D" uid="uid://c6piwgry7k7th" path="res://assets/props/ShelfWithBooks.png" id="14_dljss"]
[ext_resource type="Texture2D" uid="uid://c6uc6xl086vqq" path="res://assets/props/Web2.png" id="15_7ej5y"]
[ext_resource type="Texture2D" uid="uid://cokgcsdb4kv3n" path="res://assets/props/Web3.png" id="16_gg7nj"]
[ext_resource type="Texture2D" uid="uid://uyvpbgj44u05" path="res://assets/props/Web4.png" id="17_fpac3"]
[ext_resource type="Script" path="res://platformer/enemies/Path.gd" id="18_3t7jv"]
[ext_resource type="PackedScene" uid="uid://cj8kkgmso5b0f" path="res://platformer/enemies/ghost/Ghost.tscn" id="19_ojafy"]
[ext_resource type="Script" path="res://platformer/dungeon1/EnemyZone.gd" id="20_426b4"]
[ext_resource type="PackedScene" uid="uid://c8ug7ksaet368" path="res://platformer/enemies/bat/Bat.tscn" id="21_almti"]
[ext_resource type="PackedScene" uid="uid://eeq7sucf4aq1" path="res://platformer/enemies/spider/Spider.tscn" id="22_wigsy"]
[ext_resource type="Script" path="res://platformer/dungeon1/Scene2.gd" id="23_a3u1m"]
[ext_resource type="PackedScene" uid="uid://dm5244vs8gaeu" path="res://platformer/scene_parts/Step.tscn" id="24_xuhql"]
[ext_resource type="PackedScene" uid="uid://b5482wafkhojc" path="res://platformer/enemies/skeleton/Skeleton.tscn" id="25_v6ffw"]
[ext_resource type="Script" path="res://platformer/dungeon1/Scene3.gd" id="26_glc80"]
[ext_resource type="PackedScene" uid="uid://blbm0pd8mxphu" path="res://platformer/scene_parts/Spikes.tscn" id="27_vonkx"]
[ext_resource type="Texture2D" uid="uid://km0f1grpu8cv" path="res://assets/Non-Tiles/Column1.png" id="28_o4ume"]
[ext_resource type="Texture2D" uid="uid://b7b3mwajh1qai" path="res://assets/tiles/Floor1.png" id="29_0i2nk"]
[ext_resource type="Texture2D" uid="uid://n52csljdx38" path="res://assets/Non-Tiles/Column-SHORT1_1.png" id="30_ub233"]
[ext_resource type="Texture2D" uid="uid://qcmcrcxh03mx" path="res://assets/tiles/Sealing1.png" id="31_s2u7o"]

[sub_resource type="GDScript" id="GDScript_32hxb"]
script/source = "extends Node

class_name FirstScene

@onready var players_node = $Players
@onready var luna : Luna = $Players/Luna
@onready var stella : Stella = $Players/Stella

var HUDScene = preload(\"res://platformer/hud/Hud.tscn\")
@onready var hud : HUD =  HUDScene.instantiate() 

@onready var game_over_scene_class = preload(\"res://platformer/game_over/GameOver.tscn\")
var game_over_scene 		


		
func _ready():
	add_child(hud)

	luna.set_health(Global.players_health[Luna.NAME])
	stella.set_health(Global.players_health[Stella.NAME])
	
	hud.setup(luna.health, stella.health)
	
	players_node.player_entered_scene($Scene1)
	
	
func _process(delta):
	if (!game_over_scene and !luna and !stella):
		game_over_scene = game_over_scene_class.instantiate()
		game_over_scene.key_pressed.connect(_restart)
		get_tree().current_scene.add_child(game_over_scene)
		
	
func _restart():
	Global._init()
	get_tree().change_scene_to_file(\"res://platformer/dungeon1/Scene1.tscn\")
"

[sub_resource type="Curve2D" id="Curve2D_ppkf3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 755, 510, 0, 0, 0, 0, 992, 444, 0, 0, 0, 0, 1284.24, 511.062, 0, 0, 0, 0, 1569, 446, 0, 0, 0, 0, 1813, 509)
}
point_count = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_spa2j"]
radius = 319.006

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08ylh"]

[sub_resource type="Curve2D" id="Curve2D_nqk1h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 596, 771, 0, 0, 0, 0, 2014, 765)
}
point_count = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_s717n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hoy8"]
size = Vector2(2115.5, 272)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt4j7"]
size = Vector2(120, 278.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2oyhc"]
size = Vector2(119, 274)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6dm7"]
size = Vector2(446.5, 277)

[node name="FirstScene" type="Node2D"]
script = SubResource("GDScript_32hxb")

[node name="Scene1" type="Node2D" parent="."]
script = ExtResource("1_x5e3m")
metadata/_edit_group_ = true

[node name="CameraLimitSetter" parent="Scene1" instance=ExtResource("2_luo75")]
position = Vector2(2336, 1192)

[node name="Scene" type="Node2D" parent="Scene1"]
position = Vector2(0, 1)
metadata/_edit_group_ = true

[node name="background" parent="Scene1/Scene" instance=ExtResource("3_dblrk")]
metadata/_edit_group_ = true

[node name="Ceiling" parent="Scene1/Scene" instance=ExtResource("4_pyp8n")]
position = Vector2(-4, -1)
metadata/_edit_group_ = true

[node name="Floor" parent="Scene1/Scene" instance=ExtResource("5_omt4w")]
texture_repeat = 2
position = Vector2(-4, 1341)

[node name="TextureRect" parent="Scene1/Scene/Floor" index="1"]
offset_right = 2675.0
offset_bottom = 280.0

[node name="Floating_platform" parent="Scene1/Scene" instance=ExtResource("6_kypob")]
position = Vector2(723, 639)

[node name="TextureRect" parent="Scene1/Scene/Floating_platform" index="1"]
offset_left = -110.0

[node name="Wall" parent="Scene1/Scene" instance=ExtResource("7_4p4r4")]
position = Vector2(1175, 699)
metadata/_edit_group_ = true

[node name="TextureRect" parent="Scene1/Scene/Wall" index="1"]
offset_top = 17.0
offset_bottom = 663.0

[node name="CandleStick" parent="Scene1/Scene" instance=ExtResource("8_r2k6b")]
position = Vector2(894, 913)
metadata/_edit_group_ = true

[node name="CandleStick2" parent="Scene1/Scene" instance=ExtResource("8_r2k6b")]
position = Vector2(1562, 926)
metadata/_edit_group_ = true

[node name="Lantern" parent="Scene1/Scene" instance=ExtResource("9_jmdpn")]
position = Vector2(1317, 186)
metadata/_edit_group_ = true

[node name="LeftWall" parent="Scene1/Scene" instance=ExtResource("7_4p4r4")]
position = Vector2(-18, 125)
metadata/_edit_group_ = true

[node name="TextureRect" parent="Scene1/Scene/LeftWall" index="1"]
offset_left = 14.0
offset_top = -52.0
offset_right = 142.0
offset_bottom = 958.0
flip_h = true

[node name="RightWall" parent="Scene1/Scene" instance=ExtResource("7_4p4r4")]
position = Vector2(2440, 73)
metadata/_edit_group_ = true

[node name="TextureRect" parent="Scene1/Scene/RightWall" index="1"]
offset_left = 9.0
offset_top = -4.0
offset_right = 137.0
offset_bottom = 860.0
flip_h = true

[node name="SimplePlatform" parent="Scene1/Scene" instance=ExtResource("10_3ckih")]
position = Vector2(671, 1123)

[node name="SimplePlatform2" parent="Scene1/Scene" instance=ExtResource("10_3ckih")]
position = Vector2(273, 885)

[node name="SimplePlatform3" parent="Scene1/Scene" instance=ExtResource("10_3ckih")]
position = Vector2(2210, 998)

[node name="Chair1left" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(1341.5, 1291.5)
texture = ExtResource("11_hdj0o")

[node name="Chair1right" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(1534.5, 1285.5)
texture = ExtResource("12_oqgw6")

[node name="Table" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(1437.5, 1298.5)
texture = ExtResource("13_43pew")

[node name="ShelfWithBooks" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(1055, 1189)
scale = Vector2(1.5, 1.5)
texture = ExtResource("14_dljss")

[node name="Web2" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(2396, 200)
scale = Vector2(2, 2)
texture = ExtResource("15_7ej5y")
flip_h = true

[node name="Web3" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(1112, 1239)
texture = ExtResource("16_gg7nj")

[node name="Web4" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(1103, 763)
texture = ExtResource("15_7ej5y")
flip_h = true

[node name="Web5" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(680, 761)
rotation = 1.5708
texture = ExtResource("17_fpac3")

[node name="Web6" type="Sprite2D" parent="Scene1/Scene"]
position = Vector2(2181, 188)
rotation = 1.5708
scale = Vector2(1.91993, 2.0906)
texture = ExtResource("17_fpac3")

[node name="Path2D" type="Path2D" parent="Scene1"]
position = Vector2(23, 91.9659)
scale = Vector2(1, 0.880707)
curve = SubResource("Curve2D_ppkf3")
script = ExtResource("18_3t7jv")

[node name="PathFollow2D" type="PathFollow2D" parent="Scene1/Path2D"]
position = Vector2(755, 510)
rotation = -0.000945179
rotates = false

[node name="Ghost" parent="Scene1/Path2D/PathFollow2D" instance=ExtResource("19_ojafy")]

[node name="EnemyZone" type="Area2D" parent="Scene1" node_paths=PackedStringArray("enemy")]
position = Vector2(0, 1)
collision_mask = 3
script = ExtResource("20_426b4")
enemy = NodePath("Bat")

[node name="Bat" parent="Scene1/EnemyZone" instance=ExtResource("21_almti")]
position = Vector2(391, 433)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scene1/EnemyZone"]
position = Vector2(416, 420)
shape = SubResource("CircleShape2D_spa2j")

[node name="SpiderWithWebLarge" parent="Scene1" instance=ExtResource("22_wigsy")]
position = Vector2(2183, 601)
scale = Vector2(1.5, 1.5)
range_of_movement = 180

[node name="SpiderWithWeb" parent="Scene1" instance=ExtResource("22_wigsy")]
position = Vector2(678, 954)
range_of_movement = 100

[node name="Scene2" type="Node2D" parent="."]
position = Vector2(2556, 900)
script = ExtResource("23_a3u1m")
metadata/_edit_group_ = true

[node name="CameraLimitSetter" parent="Scene2" instance=ExtResource("2_luo75")]
position = Vector2(2299, 617)
metadata/_edit_group_ = true

[node name="Scene" type="Node2D" parent="Scene2"]
position = Vector2(1, 0)
metadata/_edit_group_ = true

[node name="background" parent="Scene2/Scene" instance=ExtResource("3_dblrk")]
position = Vector2(-3, -10)
metadata/_edit_group_ = true

[node name="Floating_platform1" parent="Scene2/Scene" instance=ExtResource("6_kypob")]
position = Vector2(284, 509)

[node name="TextureRect" parent="Scene2/Scene/Floating_platform1" index="1"]
offset_left = -273.0
offset_top = -69.0
offset_right = 1675.0
offset_bottom = 11.0

[node name="Floating_platform2" parent="Scene2/Scene" instance=ExtResource("6_kypob")]
position = Vector2(1526, 883)

[node name="CollisionShape2D" parent="Scene2/Scene/Floating_platform2" index="0"]
position = Vector2(536.375, 36)
shape = SubResource("RectangleShape2D_08ylh")

[node name="TextureRect" parent="Scene2/Scene/Floating_platform2" index="1"]
offset_left = -1033.0
offset_right = 958.0

[node name="Floating_platform" parent="Scene2/Scene" instance=ExtResource("6_kypob")]
position = Vector2(108, 1384)

[node name="TextureRect" parent="Scene2/Scene/Floating_platform" index="1"]
offset_left = -27.0
offset_top = 8.0
offset_right = 2104.0
offset_bottom = 88.0

[node name="Ceiling" parent="Scene2/Scene" instance=ExtResource("4_pyp8n")]
position = Vector2(-100, -70)
metadata/_edit_group_ = true

[node name="RightWall" parent="Scene2/Scene" instance=ExtResource("7_4p4r4")]
position = Vector2(2438, 20)
metadata/_edit_group_ = true

[node name="LeftWall" parent="Scene2/Scene" instance=ExtResource("7_4p4r4")]
position = Vector2(8, 551)
metadata/_edit_group_ = true

[node name="TextureRect" parent="Scene2/Scene/LeftWall" index="1"]
offset_left = -12.0
offset_top = -85.0
offset_right = 116.0
offset_bottom = 876.0

[node name="Step2" parent="Scene2/Scene" instance=ExtResource("24_xuhql")]
position = Vector2(2328, 678)
metadata/_edit_group_ = true

[node name="Step" parent="Scene2/Scene" instance=ExtResource("24_xuhql")]
position = Vector2(200, 1159)
metadata/_edit_group_ = true

[node name="Path2D" type="Path2D" parent="Scene2"]
position = Vector2(-24, 1)
curve = SubResource("Curve2D_nqk1h")
script = ExtResource("18_3t7jv")
base_speed = 200.0
direction = 1
metadata/_edit_group_ = true

[node name="PathFollow2D" type="PathFollow2D" parent="Scene2/Path2D"]
position = Vector2(596, 771)
rotation = -0.00423129

[node name="Skeleton" parent="Scene2/Path2D/PathFollow2D" instance=ExtResource("25_v6ffw")]
position = Vector2(97.1557, -36.5893)

[node name="Scene3" type="Node2D" parent="."]
position = Vector2(2560, 2344)
script = ExtResource("26_glc80")
metadata/_edit_group_ = true

[node name="CameraLimitSetter" parent="Scene3" instance=ExtResource("2_luo75")]
position = Vector2(2268, 162)
metadata/_edit_group_ = true

[node name="Scene" type="Node2D" parent="Scene3"]
metadata/_edit_group_ = true

[node name="background" parent="Scene3/Scene" instance=ExtResource("3_dblrk")]
position = Vector2(15, -27)
metadata/_edit_group_ = true

[node name="Floor" parent="Scene3/Scene" instance=ExtResource("5_omt4w")]
position = Vector2(-12, 1334)

[node name="LeftWall" parent="Scene3/Scene" instance=ExtResource("7_4p4r4")]
position = Vector2(-5, 2)
metadata/_edit_group_ = true

[node name="TextureRect" parent="Scene3/Scene/LeftWall" index="1"]
offset_top = -1.0
offset_bottom = 1381.0

[node name="SimplePlatform" parent="Scene3/Scene" instance=ExtResource("10_3ckih")]
position = Vector2(191, 734)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="SimplePlatform2" parent="Scene3/Scene" instance=ExtResource("10_3ckih")]
position = Vector2(191, 1112)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="SimplePlatform3" parent="Scene3/Scene" instance=ExtResource("10_3ckih")]
position = Vector2(2365, 226)
scale = Vector2(0.5, 0.5)
metadata/_edit_group_ = true

[node name="SpikeCeiling" type="StaticBody2D" parent="Scene3/Scene"]
position = Vector2(127, 468)
metadata/_edit_group_ = true

[node name="Spikes" parent="Scene3/Scene/SpikeCeiling" instance=ExtResource("27_vonkx")]
position = Vector2(480, 244)

[node name="SpikeTexture" parent="Scene3/Scene/SpikeCeiling/Spikes" index="0"]
offset_right = 700.0

[node name="CollisionShape2D" parent="Scene3/Scene/SpikeCeiling/Spikes" index="1"]
position = Vector2(356, 26)

[node name="Spikes2" parent="Scene3/Scene/SpikeCeiling" instance=ExtResource("27_vonkx")]
position = Vector2(1517, 238)

[node name="SpikeTexture" parent="Scene3/Scene/SpikeCeiling/Spikes2" index="0"]
offset_left = -201.0
offset_top = 7.0
offset_right = 494.0
offset_bottom = 47.0

[node name="CollisionShape2D" parent="Scene3/Scene/SpikeCeiling/Spikes2" index="1"]
position = Vector2(144, 31)

[node name="Scene" type="Node2D" parent="Scene3/Scene/SpikeCeiling"]

[node name="Floor2" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(2143, 143)
texture = ExtResource("28_o4ume")

[node name="Floor1" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(2332, 144)
texture = ExtResource("29_0i2nk")

[node name="Column-short12" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(1248, 144)
texture = ExtResource("30_ub233")

[node name="Column-short15" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(415, 423)
texture = ExtResource("30_ub233")
flip_h = true
flip_v = true

[node name="Column-short14" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(416, 144)
texture = ExtResource("30_ub233")

[node name="Ceiling1" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(2342, 423)
texture = ExtResource("31_s2u7o")

[node name="Ceiling2" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(2087, 421)
texture = ExtResource("31_s2u7o")

[node name="Ceiling3" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(1831, 421)
texture = ExtResource("31_s2u7o")

[node name="Ceiling4" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(1576, 420)
texture = ExtResource("31_s2u7o")

[node name="Ceiling5" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(1320, 420)
texture = ExtResource("31_s2u7o")

[node name="Ceiling6" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(1068, 420)
texture = ExtResource("31_s2u7o")

[node name="Ceiling7" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(816, 421)
texture = ExtResource("31_s2u7o")

[node name="Ceiling8" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
material = SubResource("CanvasItemMaterial_s717n")
position = Vector2(560, 422)
texture = ExtResource("31_s2u7o")

[node name="Ceiling9" type="Sprite2D" parent="Scene3/Scene/SpikeCeiling/Scene"]
position = Vector2(489, 421)
texture = ExtResource("31_s2u7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scene3/Scene/SpikeCeiling"]
visible = false
position = Vector2(1410.25, 420)
shape = SubResource("RectangleShape2D_4hoy8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Scene3/Scene/SpikeCeiling"]
visible = false
position = Vector2(415, 143.75)
shape = SubResource("RectangleShape2D_gt4j7")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Scene3/Scene/SpikeCeiling"]
visible = false
position = Vector2(1247.5, 149)
shape = SubResource("RectangleShape2D_2oyhc")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Scene3/Scene/SpikeCeiling"]
visible = false
position = Vector2(2244, 140)
shape = SubResource("RectangleShape2D_g6dm7")

[node name="RightWall" parent="Scene3/Scene" instance=ExtResource("7_4p4r4")]
position = Vector2(2439, 2)

[node name="TextureRect" parent="Scene3/Scene/RightWall" index="1"]
offset_bottom = 483.0

[node name="RightWall2" parent="Scene3/Scene" instance=ExtResource("7_4p4r4")]
position = Vector2(2439, 967)

[node name="TextureRect" parent="Scene3/Scene/RightWall2" index="1"]
offset_top = 44.0
offset_bottom = 430.0

[node name="Players" parent="." instance=ExtResource("2_h54dm")]
position = Vector2(-3, 10)

[node name="Camera2D" parent="Players" index="0"]
position = Vector2(1270, 719)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 3.0
rotation_smoothing_enabled = true

[node name="Luna" parent="Players" index="1"]
position = Vector2(167, 1232)
metadata/_edit_group_ = true

[node name="Stella" parent="Players" index="2"]
position = Vector2(262, 1270)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -4.0
offset_top = 1424.0
offset_right = 2675.0
offset_bottom = 3784.0
texture = ExtResource("2_1flpy")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 2453.0
offset_top = -146.0
offset_right = 5969.0
offset_bottom = 938.0
texture = ExtResource("2_1flpy")
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 5001.0
offset_top = 935.0
offset_right = 5969.0
offset_bottom = 3773.0
texture = ExtResource("2_1flpy")
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="."]
offset_left = 1998.0
offset_top = 3699.0
offset_right = 5971.0
offset_bottom = 6488.0
texture = ExtResource("2_1flpy")
stretch_mode = 1

[connection signal="player_in_scene" from="Scene1" to="Players" method="player_entered_scene"]
[connection signal="direction_changed" from="Scene1/Path2D" to="Scene1/Path2D/PathFollow2D/Ghost" method="flip_sprite" flags=18]
[connection signal="body_entered" from="Scene1/EnemyZone" to="Scene1/EnemyZone" method="_on_body_entered" flags=18]
[connection signal="body_exited" from="Scene1/EnemyZone" to="Scene1/EnemyZone" method="_on_body_exited" flags=18]
[connection signal="player_in_scene" from="Scene2" to="Players" method="player_entered_scene"]
[connection signal="direction_changed" from="Scene2/Path2D" to="Scene2/Path2D/PathFollow2D/Skeleton" method="_on_path_2d_direction_changed" flags=18]
[connection signal="change_direction" from="Scene2/Path2D/PathFollow2D/Skeleton" to="Scene2/Path2D" method="reverse_direction" flags=18]
[connection signal="dash" from="Scene2/Path2D/PathFollow2D/Skeleton" to="Scene2/Path2D" method="_on_dash" flags=18]
[connection signal="stop_dash" from="Scene2/Path2D/PathFollow2D/Skeleton" to="Scene2/Path2D" method="_on_stop_dash" flags=18]
[connection signal="player_in_scene" from="Scene3" to="Players" method="player_entered_scene"]

[editable path="Scene1/Scene/Floor"]
[editable path="Scene1/Scene/Floating_platform"]
[editable path="Scene1/Scene/Wall"]
[editable path="Scene1/Scene/LeftWall"]
[editable path="Scene1/Scene/RightWall"]
[editable path="Scene2/Scene/Floating_platform1"]
[editable path="Scene2/Scene/Floating_platform2"]
[editable path="Scene2/Scene/Floating_platform"]
[editable path="Scene2/Scene/LeftWall"]
[editable path="Scene3/Scene/LeftWall"]
[editable path="Scene3/Scene/SpikeCeiling/Spikes"]
[editable path="Scene3/Scene/SpikeCeiling/Spikes2"]
[editable path="Scene3/Scene/RightWall"]
[editable path="Scene3/Scene/RightWall2"]
[editable path="Players"]
