[gd_scene load_steps=14 format=3 uid="uid://cm6jy8cobhd0h"]

[ext_resource type="Script" path="res://platformer/dungeon1/Scene2.gd" id="1_xcoiv"]
[ext_resource type="PackedScene" uid="uid://b5482wafkhojc" path="res://platformer/enemies/skeleton/Skeleton.tscn" id="2_0io3v"]
[ext_resource type="PackedScene" uid="uid://b7fx5mrmrtdwq" path="res://platformer/ExitControl.tscn" id="2_q6jiv"]
[ext_resource type="PackedScene" uid="uid://bv3nwqw7dlit1" path="res://platformer/scene_parts/Background.tscn" id="3_fwjt5"]
[ext_resource type="PackedScene" uid="uid://c7cvc0vmc2yjo" path="res://platformer/scene_parts/Wall.tscn" id="4_uebxx"]
[ext_resource type="PackedScene" uid="uid://dumot6m6l1tbo" path="res://platformer/scene_parts/FloatingPlatform.tscn" id="5_1cvgu"]
[ext_resource type="PackedScene" uid="uid://cb2dvojxoxhol" path="res://platformer/scene_parts/Ceiling.tscn" id="6_c1jup"]
[ext_resource type="PackedScene" uid="uid://dm5244vs8gaeu" path="res://platformer/scene_parts/Step.tscn" id="7_4my6n"]
[ext_resource type="PackedScene" uid="uid://7jopf8qqxkmc" path="res://platformer/players/stella/Stella.tscn" id="8_2jcv3"]
[ext_resource type="PackedScene" uid="uid://bi1y861npo00e" path="res://platformer/players/luna/Luna.tscn" id="9_ihwy7"]
[ext_resource type="Script" path="res://platformer/enemies/Path.gd" id="11_gmp8m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08ylh"]

[sub_resource type="Curve2D" id="Curve2D_nqk1h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 596, 771, 0, 0, 0, 0, 2014, 765)
}
point_count = 2

[node name="Scene2" type="Node2D"]
script = ExtResource("1_xcoiv")

[node name="ExitControlTop" parent="." instance=ExtResource("2_q6jiv")]
position = Vector2(0, 292)
rotation = 3.14159
scale = Vector2(1, -1)

[node name="ExitControlBottom" parent="." instance=ExtResource("2_q6jiv")]
position = Vector2(2188, 1250)

[node name="Scene" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="background" parent="Scene" instance=ExtResource("3_fwjt5")]

[node name="Wall2" parent="Scene" instance=ExtResource("4_uebxx")]
position = Vector2(2165, 950)

[node name="TextureRect" parent="Scene/Wall2" index="1"]
offset_left = -65.0
offset_top = -67.0
offset_right = 63.0
offset_bottom = 187.0

[node name="Floating_platform1" parent="Scene" instance=ExtResource("5_1cvgu")]
position = Vector2(226, 498)

[node name="TextureRect" parent="Scene/Floating_platform1" index="1"]
offset_left = -273.0
offset_top = -69.0
offset_right = 1850.0
offset_bottom = 11.0

[node name="Floating_platform2" parent="Scene" instance=ExtResource("5_1cvgu")]
position = Vector2(1526, 883)

[node name="CollisionShape2D" parent="Scene/Floating_platform2" index="0"]
position = Vector2(536.375, 36)
shape = SubResource("RectangleShape2D_08ylh")

[node name="TextureRect" parent="Scene/Floating_platform2" index="1"]
offset_left = -1033.0
offset_right = 958.0

[node name="Floating_platform" parent="Scene" instance=ExtResource("5_1cvgu")]
position = Vector2(106, 1376)

[node name="TextureRect" parent="Scene/Floating_platform" index="1"]
offset_left = -27.0
offset_top = 8.0
offset_right = 2192.0
offset_bottom = 88.0

[node name="Ceiling" parent="Scene" instance=ExtResource("6_c1jup")]
position = Vector2(11, -70)

[node name="Step2" parent="Scene" instance=ExtResource("7_4my6n")]
position = Vector2(2338, 657)

[node name="Step" parent="Scene" instance=ExtResource("7_4my6n")]
position = Vector2(200, 1159)

[node name="Wall" parent="Scene" instance=ExtResource("4_uebxx")]
position = Vector2(4, 2)

[node name="TextureRect" parent="Scene/Wall" index="1"]
offset_left = -65.0
offset_top = -70.0
offset_right = 63.0
offset_bottom = 187.0

[node name="RightWall" parent="Scene" instance=ExtResource("4_uebxx")]
position = Vector2(2462, 20)

[node name="LeftWall" parent="Scene" instance=ExtResource("4_uebxx")]
position = Vector2(-56, 504)

[node name="Stella" parent="." instance=ExtResource("8_2jcv3")]
position = Vector2(245, 366)

[node name="Luna" parent="." instance=ExtResource("9_ihwy7")]
position = Vector2(167, 328)

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-24, 1)
curve = SubResource("Curve2D_nqk1h")
script = ExtResource("11_gmp8m")
base_speed = 200.0
direction = 1

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(596, 771)
rotation = -0.00423129

[node name="Skeleton" parent="Path2D/PathFollow2D" instance=ExtResource("2_0io3v")]
position = Vector2(97.1557, -36.5893)

[connection signal="direction_changed" from="Path2D" to="Path2D/PathFollow2D/Skeleton" method="_on_path_2d_direction_changed"]
[connection signal="change_direction" from="Path2D/PathFollow2D/Skeleton" to="Path2D" method="reverse_direction"]
[connection signal="dash" from="Path2D/PathFollow2D/Skeleton" to="Path2D" method="_on_dash"]
[connection signal="stop_dash" from="Path2D/PathFollow2D/Skeleton" to="Path2D" method="_on_stop_dash"]

[editable path="Scene/Wall2"]
[editable path="Scene/Floating_platform1"]
[editable path="Scene/Floating_platform2"]
[editable path="Scene/Floating_platform"]
[editable path="Scene/Wall"]
